<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBG"
    tools:context=".Activity4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/jura_medium"
                android:text="@string/recommendMsg"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/jura_medium"
                android:text="@string/upcoming"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/jura_medium"
                android:text="@string/ongoing"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:id="@+id/ongoingList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ongoing1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="148dp"
                            android:layout_height="212dp"
                            app:srcCompat="@drawable/show1" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jura_medium"
                            android:gravity="center"
                            android:text="@string/one_piece"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ongoing2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@color/content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="148dp"
                            android:layout_height="212dp"
                            app:srcCompat="@drawable/ongoing2" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jura_medium"
                            android:gravity="center"
                            android:text="@string/cote"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ongoing3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="148dp"
                            android:layout_height="212dp"
                            app:srcCompat="@drawable/ongoing3" />

                        <TextView
                            android:id="@+id/textView32"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jura_medium"
                            android:gravity="center"
                            android:text="@string/pj"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/jura_medium"
                android:text="@string/completed"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="148dp"
                    android:layout_height="212dp"
                    app:srcCompat="@drawable/show3" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jura_medium"
                    android:gravity="center"
                    android:text="@string/the_office"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/topBarRecspg"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/topAndBottomBars"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            android:backgroundTint="#00782B2B"
            android:onClick="openNewActivity"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/recPgTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="18"
            android:fontFamily="@font/jura_medium"
            android:text="@string/recommends"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="61dp"
            android:layout_height="71dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBarRecspg"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@color/topAndBottomBars"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeBtnRecspg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/home2" />

        <ImageButton
            android:id="@+id/listBtnRecspg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/list" />

        <ImageButton
            android:id="@+id/recommendationsBtnRecspg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/stars2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>