<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F0915"
    tools:context=".Activity3">

    <LinearLayout
        android:id="@+id/contentLayoutWishlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomBarListpg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarListpg">

        <LinearLayout
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchShowListpg"
                android:layout_width="323dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="0.8"
                android:background="@color/login"
                android:ems="10"
                android:fontFamily="@font/jura_medium"
                android:hint="Search shows here"
                android:inputType="text"
                android:textColor="#B3000000"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/searchBtnListpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="#97DA99A3"
                app:srcCompat="@drawable/search" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/showLayoutListpg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="311dp"
                android:layout_height="187dp"
                android:layout_weight="1"
                android:contentDescription="@string/showImages"
                app:srcCompat="@drawable/show3" />

            <LinearLayout
                android:id="@+id/showInfo3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jura_medium"
                    android:text="@string/the_office"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jura_medium"
                    android:text="@string/completed_series"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jura_medium"
                    android:text="@string/type_tv"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jura_medium"
                    android:text="Episodes : 188"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topBarListpg"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/topAndBottomBars"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            android:backgroundTint="#00782B2B"
            android:onClick="openNewActivity"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="18"
            android:fontFamily="@font/jura_medium"
            android:text="@string/list"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="61dp"
            android:layout_height="71dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBarListpg"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@color/topAndBottomBars"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeBtnListpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/home2" />

        <ImageButton
            android:id="@+id/listBtnListpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/list2" />

        <ImageButton
            android:id="@+id/recomendationsBtnListpg"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="openNewActivity"
            app:srcCompat="@drawable/stars" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>