<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBG"
    android:backgroundTintMode="multiply"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="1450dp"
        android:layout_height="820dp"
        android:contentDescription="@string/bgImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="#CC633A7E"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/jura_medium"
            android:shadowColor="@color/shadow"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="eMail:"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/jura_medium"
            android:gravity="center_vertical"
            android:hint="example@gmail.com"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="#B3000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/jura_medium"
            android:shadowColor="@color/shadow"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:text="Password:"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/jura_medium"
            android:gravity="center_vertical"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#B3000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="16dp"
            android:background="#00751212"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1.5"
                android:fontFamily="@font/jura_medium"
                android:shadowColor="@color/shadow"
                android:shadowDx="5"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/login"
                android:textColor="@color/login"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/jura_medium"
                android:gravity="center_vertical"
                android:shadowColor="@color/shadow"
                android:shadowDx="5"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/signup"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/forgotPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/jura_medium"
            android:shadowColor="@color/shadow"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="Forgot Your Password?"
            android:textColor="#B3FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="#B337263E"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/logoDescription"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/jura_medium"
            android:gravity="left|center_vertical"
            android:text="TvList"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:background="#3E2257"
        android:fontFamily="@font/jura_medium"
        android:gravity="center_vertical"
        android:shadowColor="@color/shadow"
        android:shadowDx="10"
        android:shadowDy="15"
        android:shadowRadius="10"
        android:text="@string/welcomeMsg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.067" />

</androidx.constraintlayout.widget.ConstraintLayout>